added assert polyfil and eth signature recovery

--- a/packages/apps/package.json
+++ b/packages/apps/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/punycode": "^2.1.0",
+    "assert": "^2.0.0",
     "babel-loader": "^8.2.2",
     "buffer": "^6.0.3",
     "copy-webpack-plugin": "^7.0.0",
