--- a/packages/page-custom-signature/package.json
+++ b/packages/page-custom-signature/package.json
@@ -10,6 +10,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@babel/runtime": "^7.12.5",
-    "@polkadot/react-components": "^0.73.2-13"
+    "@polkadot/react-components": "^0.73.2-13",
+    "ethereumjs-util": "^7.0.7"
   }
 }
